# Evalution-data-agent

./: .gitignore  data_agent.py  graph.py  main.py  output_manager.py  prompt.py  pyproject.toml  state.py  tools.py
agents/: __init__.py  base_agent.py  chart_generator_agent.py  chart_summarizer_agent.py  executor_agent.py  planner_agent.py  supervisor_agent.py  synthesizer_agent.py  web_research_agent.py
config/: __init__.py  llm_config.py
legacy/: data_agent.py
prompts/: __init__.py  agent_descriptions.py  agent_prompts.py  executor_prompts.py  planner_prompts.py  supervisor_prompts.py
